--- a/shared_bike/conf/shared_bike.ini
+++ b/shared_bike/conf/shared_bike.ini
@@ -2,7 +2,7 @@
 ip       = 127.0.0.1 ;
 port     = 3306 ;
 user     = root ;
-pwd      = zzh1009.. ;
+pwd      = ... ;
 db       = shared_bike;
 
 [server]
